<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp">

    <ImageView
        android:id="@+id/img_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/public_ic_left_arrow"
        app:layout_constraintBottom_toTopOf="@id/txt_neighbor_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_neighbor_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:text="@string/group_add_txt_neighbor_title"
        android:textSize="@dimen/wd2_main_title"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/txt_neighbor_age_limit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_back" />

    <TextView
        android:id="@+id/txt_neighbor_age_limit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/group_add_txt_neighbor_age_limit"
        android:textSize="@dimen/wd2_normal_text"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/chip_group_age_limit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_neighbor_title" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group_age_limit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/txt_neighbor_member_limit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_neighbor_age_limit"
        app:singleLine="false"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_anyone"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/group_add_chip_anyone"
            app:chipBackgroundColor="@color/pressed_chip" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_nineteen_under"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/group_add_chip_nineteen_under"
            app:chipBackgroundColor="@color/pressed_chip" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_nineteen_over"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/group_add_chip_nineteen_over"
            app:chipBackgroundColor="@color/pressed_chip" />
    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/txt_neighbor_member_limit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/group_add_txt_neighbor_member_limit"
        android:textSize="@dimen/wd2_normal_text"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/chip_group_member_limit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chip_group_age_limit" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group_member_limit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/view_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_neighbor_member_limit"
        app:singleLine="false"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_no_limit"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/group_add_chip_no_limit"
            app:chipBackgroundColor="@color/pressed_chip" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_5_people"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/group_add_chip_5_people"
            app:chipBackgroundColor="@color/pressed_chip" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_10_people"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/group_add_chip_10_people"
            app:chipBackgroundColor="@color/pressed_chip" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_20_people"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/group_add_chip_20_people"
            app:chipBackgroundColor="@color/pressed_chip" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_30_people"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/group_add_chip_30_people"
            app:chipBackgroundColor="@color/pressed_chip" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_50_people"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/group_add_chip_50_people"
            app:chipBackgroundColor="@color/pressed_chip" />
    </com.google.android.material.chip.ChipGroup>

    <View
        android:id="@+id/view_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="20dp"
        android:background="@color/light_gray_box"
        app:layout_constraintBottom_toTopOf="@id/txt_password_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chip_group_member_limit" />

    <TextView
        android:id="@+id/txt_password_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/group_add_txt_password_title"
        android:textSize="@dimen/wd2_main_title"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/txt_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_line" />

    <TextView
        android:id="@+id/txt_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/group_add_txt_password"
        android:textSize="@dimen/wd2_normal_text"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/edt_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_password_title" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/public_border_box"
        android:hint="@string/group_add_hint_password"
        android:maxLines="1"
        android:padding="16dp"
        android:textSize="@dimen/wd2_normal_text"
        app:layout_constraintBottom_toTopOf="@id/txt_password_valid"
        app:layout_constraintEnd_toStartOf="@id/checkBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_password" />

    <TextView
        android:id="@+id/txt_password_valid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_password" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/group_add_check_box_no_password"
        app:layout_constraintBottom_toBottomOf="@id/edt_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/edt_password"
        app:layout_constraintTop_toTopOf="@id/edt_password" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/public_border_btn"
        android:padding="5dp"
        android:text="@string/group_add_btn_next"
        android:textColor="@color/white"
        android:textSize="@dimen/wd2_main_title"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>